--- a/project2.Rmd
+++ b/project2.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "project1"
-author: "peterxue"
-date: "2023-08-10"
+title: "project2"
+# author: "peterxue"
+# date: "2023-08-10"
 output: html_document
 ---
 
