--- a/index.Rmd
+++ b/index.Rmd
@@ -1,27 +1,17 @@
 ---
-title: "My website"
-output: 
-  html_document:
-    toc: FALSE
+title: "My Website"
+description: |
+  Welcome to the website. I hope you enjoy it!
+site: distill::distill_website
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE)
 
+# Learn more about creating websites with Distill at:
+# https://rstudio.github.io/distill/website.html
 
+# Learn more about publishing to GitHub Pages at:
+# https://rstudio.github.io/distill/publish_website.html#github-pages
 
-**Welcome to my website!**
-
-
-# Getting started
-
-Click the links in the menu above to look around.
-
-
-# Notes
-
-This website is a collection of regular (R)Markdown document, so you can use all the usual formatting.
-
-If you are new to R Markdown, you can learn more about it [on the R Markdown website](https://rmarkdown.rstudio.com/). 
-
-I also have a discussion of R Markdown and reproducibility [on one of my course pages](https://andreashandel.github.io/MADAcourse/1e_ToolsforReproducibility.html). You'll find additional links to potentially useful R Markdown (and Github) resources there.
-
-
+```
