--- a/index.Rmd
+++ b/index.Rmd
@@ -15,4 +15,4 @@ knitr::opts_chunk$set(echo = FALSE)
 # https://rstudio.github.io/distill/publish_website.html#github-pages
 
 ```
-
+Email: <peterxue1024@stu.pku.edu.cn>.
