--- a/about.Rmd
+++ b/about.Rmd
@@ -8,6 +8,6 @@ description: |
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-The website is constructed based on R markdown.
+The website is constructed by R markdown and CSS framework.
 
 ![Source: Getty Images - Big Sur](images/image.jpg){height=60% width=70% }
