--- a/index.Rmd
+++ b/index.Rmd
@@ -19,5 +19,5 @@ Email: <peterxue1024@stu.pku.edu.cn>.
 
 I'm Peter Xue, currently a master's student at Peking University HSBC Business School. I am from Shanghai, China. My Chinese name is 鎔荔(Rongli). 
 
-# Recent updates
+### Recent updates
 CV (available upon request)
