--- a/index.Rmd
+++ b/index.Rmd
@@ -20,4 +20,8 @@ Email: <peterxue1024@stu.pku.edu.cn>.
 I'm Peter Xue, currently a master's student at Peking University HSBC Business School. I am from Shanghai, China. My Chinese name is 鎔荔(Rongli). 
 
 # Recent updates
-CV (available upon request)
+CV (available upon request)  
+
+Writing sample (course term-papers)  
+<a href="https://pan.baidu.com/s/1v5rjihiB-pIjpVp4sOpqCQ" target="_blank">download</a>
+
