--- a/index.Rmd
+++ b/index.Rmd
@@ -15,13 +15,18 @@ knitr::opts_chunk$set(echo = FALSE)
 # https://rstudio.github.io/distill/publish_website.html#github-pages
 
 ```
-Email: <peterxue1024@stu.pku.edu.cn>.  
 
-I'm Peter Xue, currently a master's student at Peking University HSBC Business School. I am from Shanghai, China. My Chinese name is 鎔荔(Rongli). 
+Email: [peterxue1024\@stu.pku.edu.cn](mailto:peterxue1024@stu.pku.edu.cn){.email}.
 
-# Recent updates
-CV (available upon request)  
+Hi, I'm Peter Xue. My Chinese name is 鎔荔(Rong-li). Currently, I am a master student in Economics at Peking University HSBC Business School (expected to graduate in July 2024) and applying to PhD programs/RA positions. I built the website for application purpose.
 
-Writing sample (course term-papers)  
-<a href="https://pan.baidu.com/s/1v5rjihiB-pIjpVp4sOpqCQ" target="_blank">download</a>
+### Recent updates
 
+| File              | Status                                                                                                                    |
+|:---------------------------|:------------------------------------------|
+| Resume                 | <a href="https://drive.google.com/file/d/19asOzVFF6qKCUHThvbtT5yT3xn3VPeSi/view?usp=sharing" target="_blank">download</a> |
+| Writing sample         | <a href="https://drive.google.com/file/d/19asOzVFF6qKCUHThvbtT5yT3xn3VPeSi/view?usp=sharing" target="_blank">download</a> |
+| CV, cover letter, etc. | available upon request (not public on this site)                                                                             |
+
+### Personal
+I have lived in Shanghai for more than 20 years (born and raised). In my spare time I like walking and exploring maps of big cities.
