--- a/index.Rmd
+++ b/index.Rmd
@@ -24,8 +24,9 @@ Hi, I'm Peter Xue. My Chinese name is 鎔荔(Rong-li). Currently, I am a master 
 
 | File              | Status                                                                                                                    |
 |:---------------------------|:------------------------------------------|
-| Resume                 | <a href="https://drive.google.com/file/d/19asOzVFF6qKCUHThvbtT5yT3xn3VPeSi/view?usp=sharing" target="_blank">download</a> |
-| Writing sample         | <a href="https://drive.google.com/file/d/19asOzVFF6qKCUHThvbtT5yT3xn3VPeSi/view?usp=sharing" target="_blank">download</a> |
+| Resume                 | to be added |
+| Writing sample         | <a href="https://drive.google.com/file/d/19asOzVFF6qKCUHThvbtT5yT3xn3VPeSi/view?usp=sharing" target="_blank">sample1</a>; <a href="https://drive.google.com/file/d/19asOzVFF6qKCUHThvbtT5yT3xn3VPeSi/view?usp=sharing" target="_blank">sample2</a>; <a href="https://drive.google.com/file/d/19asOzVFF6qKCUHThvbtT5yT3xn3VPeSi/view?usp=sharing" target="_blank">sample3</a>   |
+| Coding sample         | to be added |
 | CV, cover letter, etc. | available upon request (not public on this site)                                                                             |
 
 ### Personal
