--- a/index.Rmd
+++ b/index.Rmd
@@ -18,19 +18,24 @@ knitr::opts_chunk$set(echo = FALSE)
 
 Email: [peterxue1024\@stu.pku.edu.cn](mailto:peterxue1024@stu.pku.edu.cn){.email}.
 
-Hi, I'm Peter Xue. My Chinese name is 鎔荔(Rong-li). Currently, I am a master student in Economics at Peking University HSBC Business School (expected to graduate in July 2024) and applying to PhD programs/RA positions. I built the website for application purpose.
+Hi, I'm Peter RL Xue. My Chinese name is 鎔荔(Rong-Li). Currently, I am a master student in Economics at Peking University HSBC Business School (expected to graduate in July 2024) and applying to PhD programs/RA positions. I built the website for application purpose.
 
 ### Recent updates
 
 | File              | Status                                                                                                                    |
 |:---------------------------|:------------------------------------------|
-| Resume                 | to be added |
-| Writing sample         | <a href="https://drive.google.com/file/d/19asOzVFF6qKCUHThvbtT5yT3xn3VPeSi/view?usp=sharing" target="_blank">sample1</a>; <a href="https://drive.google.com/file/d/19asOzVFF6qKCUHThvbtT5yT3xn3VPeSi/view?usp=sharing" target="_blank">sample2</a>; <a href="https://drive.google.com/file/d/19asOzVFF6qKCUHThvbtT5yT3xn3VPeSi/view?usp=sharing" target="_blank">sample3</a>   |
+| Writing sample         | <a href="https://drive.google.com/file/d/19asOzVFF6qKCUHThvbtT5yT3xn3VPeSi/view?usp=sharing" target="_blank">sample1</a>  |
 | Coding sample         | to be added |
-| CV, cover letter, etc. | available upon request (not public on this site)                                                                             |
+
 
 <!-- ### Personal -->
 <!-- I have lived in Shanghai for more than 20 years (born and raised). In my spare time I like walking and exploring maps of big cities. -->
 
+### Research interests
 
+macroeconomics, labor economics, corporate finance.
+
+### Work in progress
+
+to be added.
 
