--- a/index.Rmd
+++ b/index.Rmd
@@ -31,10 +31,10 @@ Email: [peterxue1024\@stu.pku.edu.cn](mailto:peterxue1024@stu.pku.edu.cn){.email
 ### Work in progress
 
 - **"Financial frictions, work effort, and labor market fluctuations", 2023.**   
-<a href="https://drive.google.com/file/d/1G_X22uu-9QdNE50H_QW9FrLMKLe4KOkv/view?usp=sharing" target="_blank">model (to be added)</a>
+<a href="https://drive.google.com/file/d/1H4hiwUU2_UYPO3c35_YgsZdhoxBb_tAN/view?usp=sharing" target="_blank">draft</a>
 &nbsp;
 
-Abstract: I study how financial frictions and work effort affect labor market fluctuations in a dynamic general equilibrium model with standard DMP-type labor market frictions. Firms are subject to investment adjustment costs and limited enforcement constraints while workers are allowed to endogenize their labor effort (through Nash bargaining) though they are randomly matched to firms that are able to decide vacancy postings. I judge the model against quarterly U.S. data. With credit and productivity shocks, by calibration and simulation, I am able to compare data statistics with model predictions under different scenarios by switching on and off different channels separately (e.g., with vs. without financial frictions, fixed vs. bargained effort, flexible vs. sticky wages etc.).
+Abstract: I study how financial frictions and work effort affect labor market fluctuations in a dynamic general equilibrium model with standard DMP-type labor market frictions. Firms are subject to investment adjustment costs and limited enforcement constraints while workers are allowed to endogenize their labor effort through bargaining protocols though they are randomly matched to firms that are able to decide vacancy postings. I find that financial frictions lead labor market variables to exhibit greater persistence in response to productivity shocks. The introduction of work effort bargaining increases the short-run volatility of unemployment and employment responses by approximately 40 percent compared to a fixed effort scenario, with limited impact on consumption and investment transition paths. Under the flexible wage setting, effort demonstrates a procyclical pattern, and the short-run adjustment of labor market variables takes longer in the presence of productivity shock disturbances than credit shock disturbances. Besides, my benchmark model is able to restore the negative slope of the Beveridge curve and account for about 38 percent of fluctuations in labor market tightness and 65 percent of fluctuations in job vacancies observed in the quarterly U.S. data. However, the model underpredicts these fluctuations, suggesting that the amplification effects of financial friction and labor effort may be mitigated by flexible wages. Next, I will introduce sticky wages into the model.
 
 
 
