--- a/index.Rmd
+++ b/index.Rmd
@@ -3,8 +3,7 @@ title: "Rongli Xue"
 description: |
   Welcome to the website. I hope you enjoy it!
 site: distill::distill_website
-includes:
-       in_header: google.html
+
 ---
 
 ```{r setup, include=FALSE}
@@ -17,6 +16,16 @@ knitr::opts_chunk$set(echo = FALSE)
 # https://rstudio.github.io/distill/publish_website.html#github-pages
 
 ```
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NS6YZCBHJM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NS6YZCBHJM');
+</script>
 
 English name: Peter Xue    
 Email: [peterxue1024\@stu.pku.edu.cn](mailto:peterxue1024@stu.pku.edu.cn){.email}.
