--- a/index.Rmd
+++ b/index.Rmd
@@ -34,7 +34,7 @@ Email: [peterxue1024\@stu.pku.edu.cn](mailto:peterxue1024@stu.pku.edu.cn){.email
 <a href="https://drive.google.com/file/d/1H4hiwUU2_UYPO3c35_YgsZdhoxBb_tAN/view?usp=sharing" target="_blank">draft</a>
 &nbsp;
 
-Abstract: I study how firm-level financial frictions and work effort affect labor market fluctuations in a dynamic general equilibrium model with standard DMP-type labor market frictions. Firms are subject to investment adjustment costs and limited enforcement constraints while workers are allowed to endogenize their labor effort through bargaining protocols. Wages are sticky for existing workers but flexible for new hires. Under sticky wage settings, effort bargaining and financial friction both can generate larger fluctuations of labor market tightness and job vacancies. The initial response of effort exhibits a procyclical pattern in the flexible wage setting while being countercyclical in the sticky wage setting. The appearance of financial frictions also leads to more sluggish impulse responses and persistent deviations of labor market variables. Under sticky wage settings, I find that financial frictions and bargained work effort amplify long-run labor market volatility. My benchmark model is able to account for about 48 percent of fluctuations in labor market tightness and 89 percent of fluctuations in job vacancies observed in the quarterly U.S. data. 
+Abstract: I study how firm-level financial frictions and work effort affect labor market fluctuations in a dynamic general equilibrium model with standard DMP-type labor market frictions. Firms are subject to investment adjustment costs and limited enforcement constraints while workers are allowed to endogenize their labor effort through bargaining protocols. Wages are sticky for existing workers but flexible for new hires. The initial response of effort exhibits a procyclical pattern in the flexible wage setting while being countercyclical in the sticky wage setting. The appearance of financial frictions and effort bargaining, when taken separately, lead to more sluggish impulse responses and persistent deviations of labor market variables. However, when the two forces are combined together, I find that effort bargaining dampens the amplification effect of financial frictions on long-run labor market volatility.
 
 
 
